Updated properties for local runtime

--- a/app/src/test/resources/application-test.properties
+++ b/app/src/test/resources/application-test.properties
@@ -1,6 +1,6 @@
-rest-assured.port=8082
+rest-assured.port=8010
 rest-assured.base-url=http://localhost
-server.port=8082
+server.port=8010
 
 feign.okhttp.enabled=true
 feign.autoconfiguration.jackson.enabled=true
@@ -32,7 +32,7 @@ feign.client.config.ms-core-onboarding-api.errorDecoder=it.pagopa.selfcare.onboa
 feign.client.config.ms-core-onboarding-api.readTimeout=5000
 feign.client.config.ms-core-onboarding-api.loggerLevel=FULL
 
-rest-client.ms-onboarding.base-url=${MS_ONBOARDING_URL:http://localhost:8082}
+rest-client.ms-onboarding.base-url=http://localhost:8085
 rest-client.ms-onboarding-api.serviceCode=ms-onboarding-api
 rest-client.ms-onboarding-token-api.serviceCode=ms-onboarding-token-api
 rest-client.ms-onboarding-aggregates-api.serviceCode=ms-onboarding-aggregates-api
