--- a/app/src/test/resources/application-test.properties
+++ b/app/src/test/resources/application-test.properties
@@ -2,7 +2,7 @@ rest-assured.port=8010
 rest-assured.base-url=http://localhost
 server.port=8010
 
-feign.okhttp.enabled=true
+feign.okhttp.enabled=false
 feign.autoconfiguration.jackson.enabled=true
 
 rest-client.ms-core.serviceCode=ms-core
@@ -141,14 +141,15 @@ onboarding-backend.blob-storage.filepath-product = products.json
 onboarding-backend.blob-storage.connection-string-product = DefaultEndpointsProtocol=http;AccountName=devstoreaccount1;AccountKey=Eby8vdM02xNOcqFlqUwJPLlmEtlCD9I1QhZT4gRjAAHEDPazjFIwtg==;BlobEndpoint=http://127.0.0.1:10010/devstoreaccount1;
 
 rest-client.user-registry.serviceCode=user-registry
-rest-client.user-registry.apiKey=${USERVICE_USER_REGISTRY_API_KEY:}
-rest-client.user-registry.base-url=${USERVICE_USER_REGISTRY_URL:http://localhost:8080/pdnd-interop-uservice-user-registry/0.0.1}
+rest-client.user-registry.apiKey=fake-api-key
+rest-client.user-registry.base-url=http://localhost:1080/user-registry-mock/v1
 rest-client.user-registry.getUserByExternalId.path=/users/search
 rest-client.user-registry.getUserByInternalId.path=/users/{id}
 rest-client.user-registry.patchUser.path=/users/{id}
 rest-client.user-registry.saveUser.path=/users
 rest-client.user-registry.deleteUserById.path=/users/{id}
-feign.client.config.user-registry.defaultRequestHeaders.x-api-key[0]=${USERVICE_USER_REGISTRY_API_KEY:api-key}
+feign.client.config.user-registry.defaultRequestHeaders.x-api-key[0]=fake-api-key
 feign.client.config.user-registry.connectTimeout=5000
 feign.client.config.user-registry.readTimeout=5000
 feign.client.config.user-registry.loggerLevel=FULL
+
