--- a/app/src/test/resources/application-test.properties
+++ b/app/src/test/resources/application-test.properties
@@ -118,7 +118,7 @@ feign.client.config.party-process.readTimeout=5000
 feign.client.config.party-process.loggerLevel=FULL
 
 rest-client.party-registry-proxy.serviceCode=party-registry-proxy
-rest-client.party-registry-proxy.base-url=${USERVICE_PARTY_REGISTRY_PROXY_URL:http://localhost:8080/external/ur/v1}
+rest-client.party-registry-proxy.base-url=http://localhost:1080
 rest-client.party-registry-proxy.getInstitutionsByUserLegalTaxId.path=/info-camere/institutions
 rest-client.party-registry-proxy.matchInstitutionAndUser.path=/national-registries/verify-legal
 rest-client.party-registry-proxy.getInstitutionLegalAddress.path=/national-registries/legal-address
