Added scenarios for institution-v2 controller

--- a/app/src/test/resources/application-test.properties
+++ b/app/src/test/resources/application-test.properties
@@ -89,7 +89,7 @@ feign.client.config.onboarding-functions-api.errorDecoder=it.pagopa.selfcare.onb
 feign.client.config.onboarding-functions-api.defaultRequestHeaders.x-functions-key[0]=${ONBOARDING-FUNCTIONS-API-KEY:example-api-key}
 
 rest-client.party-process.serviceCode=party-process
-rest-client.party-process.base-url=${USERVICE_PARTY_PROCESS_URL:http://localhost:8080/pdnd-interop-uservice-party-process/0.0.1}
+rest-client.party-process.base-url=http://localhost:1080/pdnd-interop-uservice-party-process
 rest-client.party-process.onboardingOrganization.path=/onboarding/institution
 rest-client.party-process.verifyOnboardingByExternalId.path=/onboarding/institution/{externalId}/products/{productId}
 rest-client.party-process.verifyOnboarding.path=/onboarding/
