--- a/app/src/test/resources/application-test.properties
+++ b/app/src/test/resources/application-test.properties
@@ -98,7 +98,7 @@ rest-client.party-process.onboardingComplete.path=/onboarding/complete/{tokenId}
 rest-client.party-process.getUserInstitutionRelationships.path=external/institutions/{externalId}/relationships
 rest-client.party-process.getOnBoardingInfo.path=/onboarding/info
 rest-client.party-process.getOnboardings.path=/institutions/{institutionId}/onboardings/
-rest-client.party-process.getInstitutions.path=/institutions/
+rest-client.party-process.getInstitutions.path=/institutions
 rest-client.party-process.getInstitutionByExternalId.path=/external/institutions/{externalId}
 rest-client.party-process.getInstitutionById.path=/institutions/{institutionId}
 rest-client.party-process.createInstitutionFromIpa.path=/institutions/from-ipa/
