Fixed env and feature file

--- a/app/src/test/resources/test-onboarding-ms.env
+++ b/app/src/test/resources/test-onboarding-ms.env
@@ -5,7 +5,7 @@ USERVICE_PARTY_REGISTRY_PROXY_URL=http://mock-server:1080/party-registry-mock/v1
 USERVICE_USER_REGISTRY_URL=http://mock-server:1080/user-registry-mock/v1
 ONBOARDING_ALLOWED_INSTITUTIONS_PRODUCTS=prod-pn-pg,prod-interop,prod-pn,prod-io,prod-io-premium,prod-pagopa,prod-dashboard-psp,prod-sendino,prod-io-sign
 
-MONGODB-CONNECTION-STRING=mongodb://mongo-db:27017/selcOnboarding?retryWrites=false&retrywrites=false&retryReads=false&retryreads=false
+MONGODB-CONNECTION-STRING=mongodb://mongo-db:27017/?retryWrites=false&retryReads=false
 
 USER-REGISTRY-API-KEY=test-key
 USER_REGISTRY_URL=http://mock-server:1080/user-registry-mock/v1
