Added more feature into institution

--- a/app/src/test/resources/application-test.properties
+++ b/app/src/test/resources/application-test.properties
@@ -79,7 +79,7 @@ feign.client.config.ms-user-api.loggerLevel=FULL
 feign.client.config.ms-user-api.connectTimeout=5000
 
 
-rest-client.ms-user.base-url=${MS_USER_URL:http://localhost:8080}
+rest-client.ms-user.base-url=http://localhost:8087
 rest-client.ms-user-api.serviceCode=ms-user-api
 
 rest-client.onboarding-functions-api.serviceCode=onboarding-functions-api
