[SELC-6920] feat: Added scenarios for Token, Institution, InstitutionV2, Product, User Controller

--- a/app/src/test/resources/application-test.properties
+++ b/app/src/test/resources/application-test.properties
@@ -1,8 +1,8 @@
-rest-assured.port=8082
+rest-assured.port=8010
 rest-assured.base-url=http://localhost
-server.port=8082
+server.port=8010
 
-feign.okhttp.enabled=true
+feign.okhttp.enabled=false
 feign.autoconfiguration.jackson.enabled=true
 
 rest-client.ms-core.serviceCode=ms-core
@@ -32,7 +32,7 @@ feign.client.config.ms-core-onboarding-api.errorDecoder=it.pagopa.selfcare.onboa
 feign.client.config.ms-core-onboarding-api.readTimeout=5000
 feign.client.config.ms-core-onboarding-api.loggerLevel=FULL
 
-rest-client.ms-onboarding.base-url=${MS_ONBOARDING_URL:http://localhost:8082}
+rest-client.ms-onboarding.base-url=http://localhost:8085
 rest-client.ms-onboarding-api.serviceCode=ms-onboarding-api
 rest-client.ms-onboarding-token-api.serviceCode=ms-onboarding-token-api
 rest-client.ms-onboarding-aggregates-api.serviceCode=ms-onboarding-aggregates-api
@@ -79,7 +79,7 @@ feign.client.config.ms-user-api.loggerLevel=FULL
 feign.client.config.ms-user-api.connectTimeout=5000
 
 
-rest-client.ms-user.base-url=${MS_USER_URL:http://localhost:8080}
+rest-client.ms-user.base-url=http://localhost:8087
 rest-client.ms-user-api.serviceCode=ms-user-api
 
 rest-client.onboarding-functions-api.serviceCode=onboarding-functions-api
@@ -89,7 +89,7 @@ feign.client.config.onboarding-functions-api.errorDecoder=it.pagopa.selfcare.onb
 feign.client.config.onboarding-functions-api.defaultRequestHeaders.x-functions-key[0]=${ONBOARDING-FUNCTIONS-API-KEY:example-api-key}
 
 rest-client.party-process.serviceCode=party-process
-rest-client.party-process.base-url=${USERVICE_PARTY_PROCESS_URL:http://localhost:8080/pdnd-interop-uservice-party-process/0.0.1}
+rest-client.party-process.base-url=http://localhost:1080/pdnd-interop-uservice-party-process
 rest-client.party-process.onboardingOrganization.path=/onboarding/institution
 rest-client.party-process.verifyOnboardingByExternalId.path=/onboarding/institution/{externalId}/products/{productId}
 rest-client.party-process.verifyOnboarding.path=/onboarding/
@@ -98,7 +98,7 @@ rest-client.party-process.onboardingComplete.path=/onboarding/complete/{tokenId}
 rest-client.party-process.getUserInstitutionRelationships.path=external/institutions/{externalId}/relationships
 rest-client.party-process.getOnBoardingInfo.path=/onboarding/info
 rest-client.party-process.getOnboardings.path=/institutions/{institutionId}/onboardings/
-rest-client.party-process.getInstitutions.path=/institutions/
+rest-client.party-process.getInstitutions.path=/institutions
 rest-client.party-process.getInstitutionByExternalId.path=/external/institutions/{externalId}
 rest-client.party-process.getInstitutionById.path=/institutions/{institutionId}
 rest-client.party-process.createInstitutionFromIpa.path=/institutions/from-ipa/
@@ -118,7 +118,7 @@ feign.client.config.party-process.readTimeout=5000
 feign.client.config.party-process.loggerLevel=FULL
 
 rest-client.party-registry-proxy.serviceCode=party-registry-proxy
-rest-client.party-registry-proxy.base-url=${USERVICE_PARTY_REGISTRY_PROXY_URL:http://localhost:8080/external/ur/v1}
+rest-client.party-registry-proxy.base-url=http://localhost:1080
 rest-client.party-registry-proxy.getInstitutionsByUserLegalTaxId.path=/info-camere/institutions
 rest-client.party-registry-proxy.matchInstitutionAndUser.path=/national-registries/verify-legal
 rest-client.party-registry-proxy.getInstitutionLegalAddress.path=/national-registries/legal-address
@@ -141,14 +141,15 @@ onboarding-backend.blob-storage.filepath-product = products.json
 onboarding-backend.blob-storage.connection-string-product = DefaultEndpointsProtocol=http;AccountName=devstoreaccount1;AccountKey=Eby8vdM02xNOcqFlqUwJPLlmEtlCD9I1QhZT4gRjAAHEDPazjFIwtg==;BlobEndpoint=http://127.0.0.1:10010/devstoreaccount1;
 
 rest-client.user-registry.serviceCode=user-registry
-rest-client.user-registry.apiKey=${USERVICE_USER_REGISTRY_API_KEY:}
-rest-client.user-registry.base-url=${USERVICE_USER_REGISTRY_URL:http://localhost:8080/pdnd-interop-uservice-user-registry/0.0.1}
+rest-client.user-registry.apiKey=fake-api-key
+rest-client.user-registry.base-url=http://localhost:1080/user-registry-mock/v1
 rest-client.user-registry.getUserByExternalId.path=/users/search
 rest-client.user-registry.getUserByInternalId.path=/users/{id}
 rest-client.user-registry.patchUser.path=/users/{id}
 rest-client.user-registry.saveUser.path=/users
 rest-client.user-registry.deleteUserById.path=/users/{id}
-feign.client.config.user-registry.defaultRequestHeaders.x-api-key[0]=${USERVICE_USER_REGISTRY_API_KEY:api-key}
+feign.client.config.user-registry.defaultRequestHeaders.x-api-key[0]=fake-api-key
 feign.client.config.user-registry.connectTimeout=5000
 feign.client.config.user-registry.readTimeout=5000
 feign.client.config.user-registry.loggerLevel=FULL
+
