Added ref to selfcare repo

--- a/pom.xml
+++ b/pom.xml
@@ -131,5 +131,10 @@
             <name>Selfcare Onboarding SDK</name>
             <url>https://maven.pkg.github.com/pagopa/selfcare-onboarding</url>
         </repository>
+        <repository>
+            <id>selfcare</id>
+            <name>Selfcare SDK</name>
+            <url>https://maven.pkg.github.com/pagopa/selfcare</url>
+        </repository>
     </repositories>
 </project>
