--- a/.github/workflows/integration_test_onboarding_bff.yml
+++ b/.github/workflows/integration_test_onboarding_bff.yml
@@ -40,11 +40,13 @@ jobs:
      # - uses: s4u/maven-settings-action@7802f6aec16c9098b4798ad1f1d8ac75198194bd # v3.0.0
       #  with:
        #   servers: '[{"id": "selfcare-onboarding", "username": "${{ github.actor }}", "password": "${{ secrets.GITHUB_TOKEN }}"}, {"id": "selfcare", "username": "${{ github.actor }}", "password": "${{ secrets.GITHUB_TOKEN }}"}, {"id": "selfcare-onboarding-backend", "username": "${{ github.actor }}", "password": "${{ secrets.GITHUB_TOKEN }}"}]'
+      - name: Build and install all modules
+        run: mvn install -DskipTests
 
       - name: Run Integration Tests
         id: int_tests
         working-directory: app
-        run:  mvn test -Dtest=it.pagopa.selfcare.onboarding.CucumberSuite -Dsurefire.failIfNoSpecifiedTests=false
+        run: mvn test -Dtest=it.pagopa.selfcare.onboarding.CucumberSuite -Dsurefire.failIfNoSpecifiedTests=false
         shell: bash
         env:
           APP_SERVER_PORT: 8082
