--- a/app/src/test/resources/docker-compose.yml
+++ b/app/src/test/resources/docker-compose.yml
@@ -35,6 +35,7 @@ services:
       - SELFCARE_INFRA_PRIVATE_ENV=dev
     networks:
       - develop-network
+    entrypoint: [ "sh", "/init_azurite.sh" ]
 
   onboarding-ms:
     image: ghcr.io/pagopa/selfcare-onboarding-ms:latest
