Modify http params

--- a/app/src/test/resources/application-test.properties
+++ b/app/src/test/resources/application-test.properties
@@ -3,6 +3,7 @@ rest-assured.base-url=http://localhost
 server.port=8010
 
 feign.okhttp.enabled=false
+feign.httpclient.enabled=false
 feign.autoconfiguration.jackson.enabled=true
 
 rest-client.ms-core.serviceCode=ms-core
