--- a/connector/rest/src/main/resources/config/feign-client.properties
+++ b/connector/rest/src/main/resources/config/feign-client.properties
@@ -1,2 +1,10 @@
 feign.okhttp.enabled=true
 feign.autoconfiguration.jackson.enabled=true
+
+feign.httpclient.enabled=true
+feign.httpclient.max-connections=${REST_CLIENT_MAX_CONNECTION:200}
+feign.httpclient.max-connections-per-route=${REST_CLIENT_MAX_CONNECTION_PER_ROUTE:50}
+feign.httpclient.time-to-live=${REST_CLIENT_CONNECT_TIME_TO_LIVE:5}
+feign.httpclient.connectTimeout=${REST_CLIENT_CONNECT_TIMEOUT:10000}
+feign.httpclient.readTimeout=${REST_CLIENT_READ_TIMEOUT:10000}
+feign.httpclient.socket-timeout=${REST_CLIENT_SOCKET_TIMEOUT:10000}
