--- a/connector/rest/pom.xml
+++ b/connector/rest/pom.xml
@@ -209,6 +209,39 @@
                             </configOptions>
                         </configuration>
                     </execution>
+
+                    <execution>
+                        <id>selc-ms-product</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <phase>process-resources</phase>
+                        <configuration>
+                            <inputSpec>${project.basedir}/docs/openapi/api-selfcare-ms-product-docs.json</inputSpec>
+                            <generatorName>spring</generatorName>
+                            <library>spring-cloud</library>
+                            <modelNameSuffix/>
+                            <generateApiTests>false</generateApiTests>
+                            <generateModelTests>false</generateModelTests>
+                            <configOptions>
+                                <useSpringBoot3>true</useSpringBoot3>
+                                <generateForOpenFeign>true</generateForOpenFeign>
+                                <basePackage>${project.groupId}.product.generated.openapi.v1</basePackage>
+                                <modelPackage>${project.groupId}.product.generated.openapi.v1.dto</modelPackage>
+                                <apiPackage>${project.groupId}.product.generated.openapi.v1.api</apiPackage>
+                                <configPackage>${project.groupId}.product.generated.openapi.v1.config</configPackage>
+                                <dateLibrary>java8-localdatetime</dateLibrary>
+                                <delegatePattern>true</delegatePattern>
+                                <interfaceOnly>true</interfaceOnly>
+                                <annotationLibrary>none</annotationLibrary>
+                                <documentationProvider>source</documentationProvider>
+                                <openApiNullable>false</openApiNullable>
+                                <skipDefaultInterface>false</skipDefaultInterface>
+                                <useTags>true</useTags>
+                            </configOptions>
+                        </configuration>
+                    </execution>
+
                 </executions>
             </plugin>
         </plugins>
