--- a/app/src/test/resources/application-test.properties
+++ b/app/src/test/resources/application-test.properties
@@ -153,3 +153,5 @@ feign.client.config.user-registry.connectTimeout=5000
 feign.client.config.user-registry.readTimeout=5000
 feign.client.config.user-registry.loggerLevel=FULL
 
+rest-client.ms-product.base-url=http://localhost:9090
+rest-client.ms-product-api.serviceCode=ms-product-api
